[gd_scene load_steps=30 format=2]

[ext_resource path="res://Components/sound_player/sound_player.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/smart_ui_nodes/smart_checkbox/smart_checkbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/smart_ui_nodes/smart_button/smart_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Themes/Styles/stylebox_selected_box.tres" type="StyleBox" id=4]
[ext_resource path="res://UI/smart_ui_nodes/smart_slider/smart_slider.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/options/options.gd" type="Script" id=6]
[ext_resource path="res://UI/Themes/Styles/stylebox_spikey.tres" type="StyleBox" id=7]
[ext_resource path="res://UI/Themes/Styles/stylebox_box.tres" type="StyleBox" id=8]
[ext_resource path="res://UI/Icons/x.png" type="Texture" id=9]
[ext_resource path="res://UI/Themes/Styles/stylebox_empty.tres" type="StyleBox" id=10]
[ext_resource path="res://UI/pause_menu/menu_unpause.wav" type="AudioStream" id=11]
[ext_resource path="res://UI/pause_menu/menu_pause.wav" type="AudioStream" id=12]
[ext_resource path="res://UI/Themes/Styles/stylebox_full.tres" type="StyleBox" id=13]
[ext_resource path="res://UI/Themes/Fonts/smallest_pixel_7.tres" type="DynamicFont" id=14]
[ext_resource path="res://UI/Themes/Fonts/m6x11.tres" type="DynamicFont" id=15]
[ext_resource path="res://UI/Icons/dropdown.png" type="Texture" id=16]
[ext_resource path="res://UI/Icons/option_selected.png" type="Texture" id=17]
[ext_resource path="res://UI/Icons/checked.png" type="Texture" id=18]
[ext_resource path="res://UI/Icons/unchecked.png" type="Texture" id=19]
[ext_resource path="res://UI/Icons/option_empty.png" type="Texture" id=20]
[ext_resource path="res://UI/Themes/grabber.png" type="Texture" id=21]
[ext_resource path="res://UI/Themes/Fonts/m6x11.ttf" type="DynamicFontData" id=22]

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="StyleBoxFlat" id=7]

[sub_resource type="StyleBoxLine" id=2]
color = Color( 1, 1, 1, 1 )
grow_begin = 0.0
grow_end = 0.0

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
outline_color = Color( 0.913725, 0.827451, 0.12549, 1 )
extra_spacing_top = 4
extra_spacing_bottom = -2
extra_spacing_space = 1
font_data = ExtResource( 22 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 1, 1, 1, 1 )
grow_begin = 0.0
grow_end = 0.0
vertical = true

[sub_resource type="Theme" id=8]
default_font = ExtResource( 15 )
CheckBox/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
CheckBox/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
CheckBox/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
CheckBox/colors/font_color_hover_pressed = Color( 1, 1, 1, 1 )
CheckBox/colors/font_color_pressed = Color( 1, 1, 1, 1 )
CheckBox/constants/check_vadjust = 0
CheckBox/constants/hseparation = 4
CheckBox/fonts/font = ExtResource( 15 )
CheckBox/icons/checked = ExtResource( 18 )
CheckBox/icons/radio_checked = ExtResource( 17 )
CheckBox/icons/radio_unchecked = ExtResource( 20 )
CheckBox/icons/unchecked = ExtResource( 19 )
CheckBox/styles/disabled = null
CheckBox/styles/focus = SubResource( 5 )
CheckBox/styles/hover = SubResource( 6 )
CheckBox/styles/hover_pressed = SubResource( 7 )
CheckBox/styles/normal = null
CheckBox/styles/pressed = null
ColorPicker/constants/h_width = 10
ColorPicker/constants/label_width = 5
ColorPicker/constants/margin = 1
ColorPicker/constants/sv_height = 10
ColorPicker/constants/sv_width = 10
ColorPickerButton/styles/disabled = ExtResource( 8 )
ColorPickerButton/styles/focus = ExtResource( 4 )
ColorPickerButton/styles/hover = ExtResource( 4 )
ColorPickerButton/styles/normal = ExtResource( 8 )
ColorPickerButton/styles/pressed = ExtResource( 4 )
HSeparator/constants/separation = 1
HSeparator/styles/separator = SubResource( 2 )
HSlider/icons/grabber = ExtResource( 21 )
HSlider/icons/grabber_highlight = ExtResource( 21 )
HSlider/styles/grabber_area = ExtResource( 4 )
HSlider/styles/grabber_area_highlight = ExtResource( 4 )
HSlider/styles/slider = ExtResource( 8 )
Icons/icons/close = ExtResource( 9 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 1 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = ExtResource( 15 )
Label/styles/normal = null
LineEdit/fonts/font = SubResource( 4 )
LineEdit/styles/focus = ExtResource( 4 )
LineEdit/styles/normal = ExtResource( 8 )
LineEdit/styles/read_only = ExtResource( 8 )
OptionButton/colors/font_color = Color( 1, 1, 1, 1 )
OptionButton/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0.2 )
OptionButton/colors/font_color_hover = Color( 1, 1, 1, 1 )
OptionButton/colors/font_color_pressed = Color( 1, 1, 1, 1 )
OptionButton/constants/arrow_margin = 2
OptionButton/constants/hseparation = 2
OptionButton/fonts/font = ExtResource( 15 )
OptionButton/icons/arrow = ExtResource( 16 )
OptionButton/styles/disabled = ExtResource( 7 )
OptionButton/styles/focus = ExtResource( 4 )
OptionButton/styles/hover = ExtResource( 8 )
OptionButton/styles/normal = ExtResource( 8 )
OptionButton/styles/pressed = ExtResource( 4 )
Panel/styles/panel = null
PanelContainer/styles/panel = ExtResource( 8 )
PopupDialog/styles/panel = ExtResource( 8 )
PopupMenu/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_separator = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = ExtResource( 15 )
PopupMenu/icons/checked = ExtResource( 17 )
PopupMenu/icons/radio_checked = ExtResource( 17 )
PopupMenu/icons/radio_unchecked = ExtResource( 20 )
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = ExtResource( 20 )
PopupMenu/styles/hover = ExtResource( 4 )
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = ExtResource( 8 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null
PopupPanel/styles/panel = ExtResource( 8 )
ProgressBar/colors/font_color = Color( 0, 0, 0, 1 )
ProgressBar/colors/font_color_shadow = Color( 1, 1, 1, 1 )
ProgressBar/fonts/font = ExtResource( 15 )
ProgressBar/styles/bg = ExtResource( 10 )
ProgressBar/styles/fg = ExtResource( 13 )
TabContainer/colors/font_color_bg = Color( 1, 1, 1, 1 )
TabContainer/colors/font_color_disabled = Color( 0.568627, 0.541176, 0.541176, 0.45098 )
TabContainer/colors/font_color_fg = Color( 0.301961, 0.768627, 0.239216, 1 )
TabContainer/constants/hseparation = 0
TabContainer/constants/label_valign_bg = 0
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 0
TabContainer/constants/top_margin = 0
TabContainer/fonts/font = ExtResource( 15 )
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = ExtResource( 8 )
TabContainer/styles/tab_bg = ExtResource( 8 )
TabContainer/styles/tab_disabled = ExtResource( 8 )
TabContainer/styles/tab_fg = ExtResource( 8 )
TooltipLabel/colors/font_color = Color( 1, 1, 1, 1 )
TooltipLabel/colors/font_color_shadow = Color( 0, 0, 0, 0.101961 )
TooltipLabel/constants/shadow_offset_x = 1
TooltipLabel/constants/shadow_offset_y = 1
TooltipLabel/fonts/font = ExtResource( 14 )
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = ExtResource( 4 )
VScrollBar/styles/grabber_highlight = ExtResource( 4 )
VScrollBar/styles/grabber_pressed = ExtResource( 4 )
VScrollBar/styles/scroll = ExtResource( 8 )
VScrollBar/styles/scroll_focus = null
VSeparator/constants/separation = 1
VSeparator/styles/separator = SubResource( 3 )
WindowDialog/colors/title_color = Color( 1, 1, 1, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = ExtResource( 15 )
WindowDialog/icons/close = ExtResource( 9 )
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = ExtResource( 8 )

[node name="options" type="Control"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 8 )
script = ExtResource( 6 )
PAUSE_SOUND = ExtResource( 12 )
UNPAUSE_SOUND = ExtResource( 11 )

[node name="tabs" type="TabContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.0
margin_top = -98.0
margin_right = 182.0
margin_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbour_left = NodePath("General")
focus_neighbour_right = NodePath("Exit")
custom_constants/hseparation = 999
custom_styles/tab_fg = ExtResource( 4 )
custom_styles/tab_bg = ExtResource( 8 )
tab_align = 0

[node name="video" type="ScrollContainer" parent="tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 25.2494
margin_right = -6.0
margin_bottom = -2.24938
focus_next = NodePath("../audio")
focus_previous = NodePath("../../exit")
follow_focus = true
__meta__ = {
"_edit_lock_": true
}

[node name="VBox" type="VBoxContainer" parent="tabs/video"]
margin_right = 336.0
margin_bottom = 202.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="fullscreen" parent="tabs/video/VBox" instance=ExtResource( 2 )]
margin_right = 336.0
margin_bottom = 26.0
shortcut_in_tooltip = false
text = "fullscreen"
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="vsync" parent="tabs/video/VBox" instance=ExtResource( 2 )]
margin_top = 30.0
margin_right = 336.0
margin_bottom = 56.0
hint_tooltip = "fixes screen tearing but causes higher input latency"
text = "vsync"
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="lighting" parent="tabs/video/VBox" instance=ExtResource( 2 )]
margin_top = 60.0
margin_right = 336.0
margin_bottom = 86.0
text = "enable lighting"
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="ambient_lighting" parent="tabs/video/VBox" instance=ExtResource( 2 )]
margin_top = 90.0
margin_right = 336.0
margin_bottom = 116.0
hint_tooltip = "the natural environment's lighting. this includes darkness in caves"
text = "enable ambient lighting"
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="gpu_snap" parent="tabs/video/VBox" instance=ExtResource( 2 )]
margin_top = 120.0
margin_right = 336.0
margin_bottom = 146.0
hint_tooltip = "fixes tilemap artifacts, but makes camera movement a bit jittery"
text = "GPU pixel snap"
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="pixel" parent="tabs/video/VBox" instance=ExtResource( 2 )]
margin_top = 150.0
margin_right = 336.0
margin_bottom = 176.0
hint_tooltip = "pixels are snapped to the game resolution instead of native resolution"
text = "pixel perfect filter (not recomended)"
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="particles" type="HBoxContainer" parent="tabs/video/VBox"]
margin_top = 180.0
margin_right = 336.0
margin_bottom = 202.0

[node name="Label" type="Label" parent="tabs/video/VBox/particles"]
margin_top = 2.0
margin_right = 56.0
margin_bottom = 20.0
text = "particles:"

[node name="dropdown" type="OptionButton" parent="tabs/video/VBox/particles"]
margin_left = 60.0
margin_right = 109.0
margin_bottom = 22.4988
theme = SubResource( 8 )
custom_constants/hseparation = -7
custom_styles/hover = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
text = "none"
flat = true
items = [ "none", null, false, 0, null, "few", null, false, 1, null, "most", null, false, 2, null, "all", null, false, 3, null ]
selected = 0

[node name="audio" type="ScrollContainer" parent="tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 23.2494
margin_right = -6.0
margin_bottom = -2.24938
focus_next = NodePath("../game")
focus_previous = NodePath("../video")
follow_focus = true

[node name="VBox" type="VBoxContainer" parent="tabs/audio"]
margin_right = 352.0
margin_bottom = 155.501
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="master_volume" parent="tabs/audio/VBox" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 24.0
margin_right = 352.0
margin_bottom = 42.0
TEXT = "master volume (bugged)"

[node name="sound_volume" parent="tabs/audio/VBox" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 46.0
margin_right = 352.0
margin_bottom = 64.0
TEXT = "sound effects volume"

[node name="menu_volume" parent="tabs/audio/VBox" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 68.0
margin_right = 352.0
margin_bottom = 86.0
TEXT = "menu volume"

[node name="ambiance_volume" parent="tabs/audio/VBox" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 90.0
margin_right = 352.0
margin_bottom = 108.0
TEXT = "ambiance volume"

[node name="footsteps_volume" parent="tabs/audio/VBox" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 112.0
margin_right = 352.0
margin_bottom = 130.0
TEXT = "footsteps volume"

[node name="game" type="ScrollContainer" parent="tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 23.2494
margin_right = -6.0
margin_bottom = -2.24938
focus_next = NodePath("../../exit")
focus_previous = NodePath("../audio")
follow_focus = true

[node name="VBox" type="VBoxContainer" parent="tabs/game"]
margin_right = 352.0
margin_bottom = 332.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="smooth" parent="tabs/game/VBox" instance=ExtResource( 2 )]
margin_top = 56.0
margin_right = 336.0
margin_bottom = 80.0
shortcut_in_tooltip = false
text = "smooth camera"
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="camera_zoom" parent="tabs/game/VBox" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 84.0
margin_right = 336.0
margin_bottom = 102.0
hint_tooltip = "accuracy of shadows, higher is better but more resource intensive"
min_value = 0.5
max_value = 1.5
step = 0.1
value = 1.0
TEXT = "camera zoom"
PROGRESS = 1

[node name="spawn_pause" parent="tabs/game/VBox" instance=ExtResource( 2 )]
margin_top = 106.0
margin_right = 336.0
margin_bottom = 130.0
hint_tooltip = "pauses the level until you start moving"
pressed = true
text = "spawn pause"
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="damage_numbers" parent="tabs/game/VBox" instance=ExtResource( 2 )]
margin_top = 134.0
margin_right = 336.0
margin_bottom = 158.0
hint_tooltip = "display the amount of damage an attack dealt"
pressed = true
text = "damage numbers"
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="show_fps" parent="tabs/game/VBox" instance=ExtResource( 2 )]
margin_top = 162.0
margin_right = 336.0
margin_bottom = 186.0
hint_tooltip = "displays framerate in the top right corner"
shortcut_in_tooltip = false
pressed = true
text = "show FPS"
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="use_color" parent="tabs/game/VBox" instance=ExtResource( 2 )]
margin_top = 190.0
margin_right = 336.0
margin_bottom = 214.0
hint_tooltip = "displays framerate in the top right corner"
shortcut_in_tooltip = false
pressed = true
text = "use custom player color"
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="hidebar" parent="tabs/game/VBox" instance=ExtResource( 2 )]
margin_top = 244.0
margin_right = 336.0
margin_bottom = 268.0
shortcut_in_tooltip = false
text = "hide item bar when empty"
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="show_hud" parent="tabs/game/VBox" instance=ExtResource( 2 )]
margin_top = 272.0
margin_right = 336.0
margin_bottom = 296.0
shortcut_in_tooltip = false
pressed = true
text = "show HUD"
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="perfection" parent="tabs/game/VBox" instance=ExtResource( 2 )]
margin_top = 28.0
margin_right = 336.0
margin_bottom = 54.0
hint_tooltip = "useful if you're going for perfects on levels"
shortcut_in_tooltip = false
text = "perfection mode (1 hit death)"
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="brain_sapping" parent="tabs/game/VBox" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 300.0
margin_right = 336.0
margin_bottom = 318.0
hint_tooltip = "accuracy of shadows, higher is better but more resource intensive"
value = 1.0
TEXT = "brain sapping"

[node name="control_scheme" type="OptionButton" parent="tabs/game/VBox"]
margin_right = 30.0
margin_bottom = 20.4988

[node name="exit" parent="." instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -65.0
margin_top = 9.0
margin_right = -10.0
margin_bottom = 31.0
rect_scale = Vector2( 0.995537, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 8 )
text = "exit"
icon = ExtResource( 9 )
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )
hover_sound = null
click_sound = null

[node name="sound_player" parent="." instance=ExtResource( 1 )]

[connection signal="tab_changed" from="tabs" to="." method="_on_tabs_tab_changed"]
[connection signal="visibility_changed" from="tabs" to="." method="_on_tabs_visibility_changed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
